--- a/style.css
+++ b/style.css
@@ -1,16 +1,26 @@
- 
- 
 /*! normalize.css v1.0.0 | MIT License | git.io/normalize */
 article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary{display:block}audio,canvas,video{display:inline-block;*display:inline;*zoom:1}audio:not([controls]){display:none;height:0}[hidden]{display:none}html{font-size:100%;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}html,button,input,select,textarea{font-family:sans-serif}body{margin:0}a:focus{outline:thin dotted}a:active,a:hover{outline:0}h1{font-size:2em;margin:.67em 0}h2{font-size:1.5em;margin:.83em 0}h3{font-size:1.17em;margin:1em 0}h4{font-size:1em;margin:1.33em 0}h5{font-size:.83em;margin:1.67em 0}h6{font-size:.75em;margin:2.33em 0}abbr[title]{border-bottom:1px dotted}b,strong{font-weight:bold}blockquote{margin:1em 40px}dfn{font-style:italic}mark{background:#ff0;color:#000}p,pre{margin:1em 0}code,kbd,pre,samp{font-family:monospace,serif;_font-family:'courier new',monospace;font-size:1em}pre{white-space:pre;white-space:pre-wrap;word-wrap:break-word}q{quotes:none}q:before,q:after{content:'';content:none}small{font-size:75%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-0.5em}sub{bottom:-0.25em}dl,menu,ol,ul{margin:1em 0}dd{margin:0 0 0 40px}menu,ol,ul{padding:0 0 0 40px}nav ul,nav ol{list-style:none;list-style-image:none}img{border:0;-ms-interpolation-mode:bicubic}svg:not(:root){overflow:hidden}figure{margin:0}form{margin:0}fieldset{border:1px solid #c0c0c0;margin:0 2px;padding:.35em .625em .75em}legend{border:0;padding:0;white-space:normal;*margin-left:-7px}button,input,select,textarea{font-size:100%;margin:0;vertical-align:baseline;*vertical-align:middle}button,input{line-height:normal}button,html input[type="button"],input[type="reset"],input[type="submit"]{-webkit-appearance:button;cursor:pointer;*overflow:visible}button[disabled],input[disabled]{cursor:default}input[type="checkbox"],input[type="radio"]{box-sizing:border-box;padding:0;*height:13px;*width:13px}input[type="search"]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration{-webkit-appearance:none}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}textarea{overflow:auto;vertical-align:top}table{border-collapse:collapse;border-spacing:0}
+
+body {
+    background-color: #d4e3fc;
+}
+
+.container {
+    max-width: 1000px;
+    margin: 0 auto;
+}
  
 h2 {
     text-align: center;
+    font-size: 1.4em;
+    font-weight: 200;
 }
  
 header {
     border: 1px solid black;
     padding: 3px 0;
     background-color: #ddd;
+    margin-bottom: 2px;
 }
  
 nav {
@@ -33,12 +43,12 @@ nav a {
     color: #000;
 }
 
-.left {
+.wrap-left, .map {
     float: left;
     margin: 0px 30px 10px 0px;
 }
  
-.right {
+.wrap-right {
     float: right;
     margin-left: 10px;
 }
@@ -48,9 +58,18 @@ nav a {
 }
  
 section {
-    border: 1px solid black;
+    border: 2px solid black;
     overflow: hidden;
     padding: 10px 20px;
+    background-color: #fff;
+}
+
+#contacts {
+    font-weight: 600;
+}
+
+.icon {
+    margin-right: 6px;
 }
  
 #name, #email {
@@ -98,16 +117,26 @@ footer {
 
 .footer-nav {
     float: left;
-    background: #999;
-    line-height: 100px;
-    vertical-align: middle;
-    padding-top: 0px;
-    padding-bottom: 0px;
+    background: #686868;
+    padding: 0px;
+}
+
+.footer-nav span {
+    text-align: center;
+    box-sizing: border-box;
+    display: inline-block;
+    width: 24%;
+    height: 17px;
+    border-left: 2px solid black;
+    margin-top: 41px;
+}
+
+.footer-nav span:first-child {
+    border-left: 0px;
 }
 
 .footer-nav a {
-    padding: 0 30px 0 30px;
-    border-left: 2px solid black;
+    color: #ff3853;
 }
 
 .footer-nav a:first-child {
@@ -117,7 +146,7 @@ footer {
 .feedback {
     float: right;
     background: #eee;
-    padding-top: 0;
+    padding-top: 10px;
 }
 
 .feedback .button {
@@ -129,6 +158,95 @@ footer {
     margin-left: 16px;
 }
 
+.feedback span {
+    float: left;
+}
+
 .copyright {
     text-align: center;
+}
+
+.bigger-text {
+    font-size: 1em;
+}
+
+.contact-type {
+    display: inline;
+}
+
+.labels {
+    margin-top: 6px;
+    float: left;
+}
+
+footer form {
+    margin-top: 12px;
+}
+
+.labels div {
+    display: inline-block;
+}
+
+@media (max-width: 570px) {
+    .labels {
+	float: left;
+    }
+    .labels div {
+	display: block;
+	width: 100px;
+	margin-top: 6px;
+    }
+    .wrap-left, .wrap-right, .footer-nav {
+	display: none;
+    }
+    .feedback {
+	width: 100%;
+	height: auto;
+	font-size: 1.2em;
+    }
+    .map {
+	float: none;
+	width: 100%;
+    }
+    .contact-type {
+	display: none;
+    }
+    .bigger-text {
+	font-size: 1.3em;
+    }
+    .button {
+	float: left;
+    }
+    .button button {
+	width: 240px;
+	height: 120px;
+	margin: 20px 0 0 20px;
+    }
+    input[type=radio] {
+	border: 0px;
+	width: 50%;
+	height: 1.4em;
+	margin: 0;
+    }
+    nav .icon {
+	margin: 0 20px 0 40px;
+    }
+    nav a {
+	width: 100%;
+	text-align: left;
+	height: 60px;
+	line-height: 60px;
+	vertical-align: middle;
+	font-size: 1.6em;
+    }
+    .feedback span {
+	float: none;
+    }
+}
+
+@media (min-width: 1000px) {
+    .copyright {
+	border: none;
+	background-color: #d4e3fc;
+    }
 }
